--- a/myresume/index.html
+++ b/myresume/index.html
@@ -73,7 +73,7 @@
           <p class="lead">Good hands on experience with React + Redux frontend frameworks and SpringBoot in creating REST endpoints</p>
           <p class="lead">Experience in building variety of full stack applications</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/nikhil-d-01392b85/">
               <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="https://github.com/nickelatomic28">
